src/llvm/wrapper/core/value.nim


# proc isAArgument*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAArgument", dynlib: LLVMlib.}
#     ##  Convert value instances between types.
#     ##
#     ##  Internally, an LLVMValueRef is "pinned" to a specific type. This
#     ##  series of functions allows you to cast an instance to a specific
#     ##  type.
#     ##
#     ##  If the cast is not valid for the specified type, NULL is returned.
#     ##
#     ##  @see llvm::dyn_cast_or_null<>
# proc isABasicBlock*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsABasicBlock", dynlib: LLVMlib.}
# proc isAInlineAsm*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAInlineAsm", dynlib: LLVMlib.}
# proc isAUser*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAUser", dynlib: LLVMlib.}
# proc isAConstant*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstant", dynlib: LLVMlib.}
# proc isABlockAddress*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsABlockAddress", dynlib: LLVMlib.}
# proc isAConstantAggregateZero*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantAggregateZero", dynlib: LLVMlib.}
# proc isAConstantArray*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantArray", dynlib: LLVMlib.}
# proc isAConstantDataSequential*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantDataSequential", dynlib: LLVMlib.}
# proc isAConstantDataArray*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantDataArray", dynlib: LLVMlib.}
# proc isAConstantDataVector*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantDataVector", dynlib: LLVMlib.}
# proc isAConstantExpr*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantExpr", dynlib: LLVMlib.}
# proc isAConstantFP*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantFP", dynlib: LLVMlib.}
# proc isAConstantInt*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantInt", dynlib: LLVMlib.}
# proc isAConstantPointerNull*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantPointerNull", dynlib: LLVMlib.}
# proc isAConstantStruct*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantStruct", dynlib: LLVMlib.}
# proc isAConstantTokenNone*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantTokenNone", dynlib: LLVMlib.}
# proc isAConstantVector*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAConstantVector", dynlib: LLVMlib.}
# proc isAGlobalValue*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAGlobalValue", dynlib: LLVMlib.}
# proc isAGlobalAlias*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAGlobalAlias", dynlib: LLVMlib.}
# proc isAGlobalIFunc*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAGlobalIFunc", dynlib: LLVMlib.}
# proc isAGlobalObject*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAGlobalObject", dynlib: LLVMlib.}
# proc isAFunction*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAFunction", dynlib: LLVMlib.}
# proc isAGlobalVariable*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAGlobalVariable", dynlib: LLVMlib.}
# proc isAUndefValue*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAUndefValue", dynlib: LLVMlib.}
# proc isAInstruction*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAInstruction", dynlib: LLVMlib.}
# proc isAUnaryOperator*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAUnaryOperator", dynlib: LLVMlib.}
# proc isABinaryOperator*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsABinaryOperator", dynlib: LLVMlib.}
# proc isACallInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsACallInst", dynlib: LLVMlib.}
# proc isAIntrinsicInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAIntrinsicInst", dynlib: LLVMlib.}
# proc isADbgInfoIntrinsic*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsADbgInfoIntrinsic", dynlib: LLVMlib.}
# proc isADbgVariableIntrinsic*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsADbgVariableIntrinsic", dynlib: LLVMlib.}
# proc isADbgDeclareInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsADbgDeclareInst", dynlib: LLVMlib.}
# proc isADbgLabelInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsADbgLabelInst", dynlib: LLVMlib.}
# proc isAMemIntrinsic*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAMemIntrinsic", dynlib: LLVMlib.}
# proc isAMemCpyInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAMemCpyInst", dynlib: LLVMlib.}
# proc isAMemMoveInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAMemMoveInst", dynlib: LLVMlib.}
# proc isAMemSetInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAMemSetInst", dynlib: LLVMlib.}
# proc isACmpInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsACmpInst", dynlib: LLVMlib.}
# proc isAFCmpInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAFCmpInst", dynlib: LLVMlib.}
# proc isAICmpInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAICmpInst", dynlib: LLVMlib.}
# proc isAExtractElementInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAExtractElementInst", dynlib: LLVMlib.}
# proc isAGetElementPtrInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAGetElementPtrInst", dynlib: LLVMlib.}
# proc isAInsertElementInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAInsertElementInst", dynlib: LLVMlib.}
# proc isAInsertValueInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAInsertValueInst", dynlib: LLVMlib.}
# proc isALandingPadInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsALandingPadInst", dynlib: LLVMlib.}
# proc isAPHINode*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAPHINode", dynlib: LLVMlib.}
# proc isASelectInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsASelectInst", dynlib: LLVMlib.}
# proc isAShuffleVectorInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAShuffleVectorInst", dynlib: LLVMlib.}
# proc isAStoreInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAStoreInst", dynlib: LLVMlib.}
# proc isABranchInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsABranchInst", dynlib: LLVMlib.}
# proc isAIndirectBrInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAIndirectBrInst", dynlib: LLVMlib.}
# proc isAInvokeInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAInvokeInst", dynlib: LLVMlib.}
# proc isAReturnInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAReturnInst", dynlib: LLVMlib.}
# proc isASwitchInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsASwitchInst", dynlib: LLVMlib.}
# proc isAUnreachableInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAUnreachableInst", dynlib: LLVMlib.}
# proc isAResumeInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAResumeInst", dynlib: LLVMlib.}
# proc isACleanupReturnInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsACleanupReturnInst", dynlib: LLVMlib.}
# proc isACatchReturnInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsACatchReturnInst", dynlib: LLVMlib.}
# proc isACatchSwitchInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsACatchSwitchInst", dynlib: LLVMlib.}
# proc isACallBrInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsACallBrInst", dynlib: LLVMlib.}
# proc isAFuncletPadInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAFuncletPadInst", dynlib: LLVMlib.}
# proc isACatchPadInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsACatchPadInst", dynlib: LLVMlib.}
# proc isACleanupPadInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsACleanupPadInst", dynlib: LLVMlib.}
# proc isAUnaryInstruction*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAUnaryInstruction", dynlib: LLVMlib.}
# proc isAAllocaInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAAllocaInst", dynlib: LLVMlib.}
# proc isACastInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsACastInst", dynlib: LLVMlib.}
# proc isAAddrSpaceCastInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAAddrSpaceCastInst", dynlib: LLVMlib.}
# proc isABitCastInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsABitCastInst", dynlib: LLVMlib.}
# proc isAFPExtInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAFPExtInst", dynlib: LLVMlib.}
# proc isAFPToSIInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAFPToSIInst", dynlib: LLVMlib.}
# proc isAFPToUIInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAFPToUIInst", dynlib: LLVMlib.}
# proc isAFPTruncInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAFPTruncInst", dynlib: LLVMlib.}
# proc isAIntToPtrInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAIntToPtrInst", dynlib: LLVMlib.}
# proc isAPtrToIntInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAPtrToIntInst", dynlib: LLVMlib.}
# proc isASExtInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsASExtInst", dynlib: LLVMlib.}
# proc isASIToFPInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsASIToFPInst", dynlib: LLVMlib.}
# proc isATruncInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsATruncInst", dynlib: LLVMlib.}
# proc isAUIToFPInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAUIToFPInst", dynlib: LLVMlib.}
# proc isAZExtInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAZExtInst", dynlib: LLVMlib.}
# proc isAExtractValueInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAExtractValueInst", dynlib: LLVMlib.}
# proc isALoadInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsALoadInst", dynlib: LLVMlib.}
# proc isAVAArgInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAVAArgInst", dynlib: LLVMlib.}
# proc isAFreezeInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAFreezeInst", dynlib: LLVMlib.}
# proc isAAtomicCmpXchgInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAAtomicCmpXchgInst", dynlib: LLVMlib.}
# proc isAAtomicRMWInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAAtomicRMWInst", dynlib: LLVMlib.}
# proc isAFenceInst*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAFenceInst", dynlib: LLVMlib.}
# proc isAMDNode*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAMDNode", dynlib: LLVMlib.}
# proc isAMDString*(val: ValueRef): ValueRef {.cdecl, importc: "LLVMIsAMDString", dynlib: LLVMlib.}
#     ## * Deprecated: Use LLVMGetValueName2 instead.



# ##  This module defines functions that allow you to inspect the uses of a
# ##  LLVMValueRef.
# ##
# ##  It is possible to obtain an LLVMUseRef for any LLVMValueRef instance.
# ##  Each LLVMUseRef (which corresponds to a llvm::Use instance) holds a
# ##  llvm::User and llvm::Value.
# proc getFirstUse*(val: ValueRef): UseRef {.cdecl, importc: "LLVMGetFirstUse", dynlib: LLVMlib.}
#     ##  Obtain the first use of a value.
#     ##
#     ##  Uses are obtained in an iterator fashion. First, call this function
#     ##  to obtain a reference to the first use. Then, call LLVMGetNextUse()
#     ##  on that instance and all subsequently obtained instances until
#     ##  LLVMGetNextUse() returns NULL.
#     ##
#     ##  @see llvm::Value::use_begin()

# proc getNextUse*(u: UseRef): UseRef {.cdecl, importc: "LLVMGetNextUse", dynlib: LLVMlib.}
#     ##  Obtain the next use of a value.
#     ##
#     ##  This effectively advances the iterator. It returns NULL if you are on
#     ##  the final use and no more are available.

# proc getUser*(u: UseRef): ValueRef {.cdecl, importc: "LLVMGetUser", dynlib: LLVMlib.}
#     ##  Obtain the user value for a user.
#     ##
#     ##  The returned value corresponds to a llvm::User type.
#     ##
#     ##  @see llvm::Use::getUser()

# proc getUsedValue*(u: UseRef): ValueRef {.cdecl, importc: "LLVMGetUsedValue", dynlib: LLVMlib.}
#     ##  Obtain the value this use corresponds to.
#     ##
#     ##  @see llvm::Use::get().


# ##  Function in this group pertain to LLVMValueRef instances that descent
# ##  from llvm::User. This includes constants, instructions, and
# ##  operators.
# proc getOperand*(val: ValueRef; index: cuint): ValueRef {.cdecl, importc: "LLVMGetOperand", dynlib: LLVMlib.}
#     ##  Obtain an operand at a specific index in a llvm::User value.
#     ##
#     ##  @see llvm::User::getOperand()
